# fitnessWebApp-UI/src/app/services/models/registration-request.ts
@@ -1,6 +1,7 @@
 /* tslint:disable */
 /* eslint-disable */
 export interface RegistrationRequest {
+  dateOfBirth: string;
   email: string;
   firstname: string;
   lastname: string;
